<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.tidypots.add.AddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextPlantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_more_space"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/Lowkey"
            android:textAlignment="center"/>
        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:layout_constraintTop_toBottomOf="@id/editTextPlantName"
            app:layout_constraintBottom_toTopOf="@id/uploadImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:src="@drawable/plant_placeholder"
            android:scaleType="centerCrop"
            />
        <Button
            android:id="@+id/uploadImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_some_space"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/image_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/Lowkey"
            android:text="@string/uploadImage"
            />
        <Button
            android:id="@+id/savePlantButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="@color/secondaryColor"
            android:textAppearance="@style/Lowkey"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>