<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.tidypots.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryVariant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/text_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/margarine"
                android:text="@string/home"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/title_toolbar"
                android:letterSpacing="0.12"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/nursery_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginBottom="@dimen/top_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_toolbar"
            android:text="@string/nursery"
            android:textAppearance="@style/CustomTitle"
            android:gravity="center"
            android:background="@drawable/rounded_textview"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onNurseryClicked()}"
/>
        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/top_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nursery_button"
            android:textAppearance="@style/Lowkey"
            android:text="@string/clear"
            android:onClick="@{() -> viewModel.onClear()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>